--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -75,7 +75,7 @@ body {
 
 hr {
   box-sizing: content-box;
-  /*height: 0;*/
+  height: 0;
   overflow: visible;
 }
 
@@ -421,8 +421,8 @@ h6, .h6 {
 }
 
 hr {
-  /*margin-top: 1rem;*/
-  /*margin-bottom: 1rem;*/
+  margin-top: 1rem;
+  margin-bottom: 1rem;
   border: 0;
   border-top: 1px solid rgba(0, 0, 0, 0.1);
 }
