--- a/src/custom.css
+++ b/src/custom.css
@@ -7,6 +7,11 @@ body {
     /*font-family: Arial;*/
 }
 
+h1, h2, h3, h4 {
+    font-family: sans-serif;
+    font-weight: normal;
+}
+
 p, li {
     font-family: 'Roboto Slab', serif;
 }
@@ -42,6 +47,8 @@ p, li {
     margin: 0;
     text-decoration: none;
     color: #333;
+    font-family: sans-serif;
+    font-weight: normal;
 }
 
 .desc-header:hover {
@@ -125,4 +132,25 @@ p, li {
         flex: 100%;
         max-width: 100%;
     }
+}
+
+.resume-header {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 0.7rem;
+    color: #2079c7;
+    font-weight: bold;
+}
+
+.resume-job-title {
+    font-family: 'Merriweather', serif;
+    font-size: 0.7rem;
+    font-weight: bold;
+    display: inline;
+}
+
+.resume-job-employer {
+    font-family: 'Merriweather', serif;
+    font-size: 0.7rem;
+    font-style: italic;
+    display: inline;
 }
