--- a/src/bootstrap.css
+++ b/src/bootstrap.css
@@ -26,15 +26,17 @@
 }
 .btn:hover,
 .btn:focus {
-  color: #333;
+  color: #fff;
   text-decoration: none;
 }
 .btn:active,
 .btn.active {
   background-image: none;
   outline: 0;
-  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
-          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+/*  -webkit-box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);
+          box-shadow: inset 0 3px 5px rgba(0, 0, 0, .125);*/
+  -webkit-box-shadow: none;
+          box-shadow: none;
 }
 .btn.disabled,
 .btn[disabled],
