--- a/src/custom.css
+++ b/src/custom.css
@@ -227,7 +227,7 @@ h3 {
 }
 
 /* Responsive layout - makes columns stack instead of next to each other */
-@media screen and (max-width: 900px) {
+/*@media screen and (max-width: 900px) {
     .column {
         -ms-flex: 50%;
         flex: 50%;
@@ -279,4 +279,4 @@ h3 {
     #content {
         padding: 4px;
     }
-}
+}*/
