--- a/src/custom.css
+++ b/src/custom.css
@@ -2,6 +2,12 @@
     box-sizing: border-box;
 }
 
+html {
+  -webkit-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
 body {
     margin: 0;
     /*font-family: Arial;*/
