--- a/src/mobile.css
+++ b/src/mobile.css
@@ -22,6 +22,9 @@
 h1 {
 	font-size: 3.5rem;
 }
+h3 {
+	font-size: 3rem;
+}
 h4 {
 	font-size: 2rem;
 }
@@ -32,10 +35,11 @@ p {
 
 .desc-header {
 	font-size: 2rem;
+	width: 20%;
 }
 
 .project-desc div p {
-	font-size: 1.5rem;
+	font-size: 2rem;
 }
 
 .resume-header {
